# ankicli

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  LICENSE  Makefile  README.md  pyproject.toml
.agent/skills/anki-operations/: SKILL.md
.agent/skills/release/: SKILL.md
.agents/skills/ankicli-maintainer/: SKILL.md
.agents/skills/ankicli-release/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: anki-catalog-reference.md  anki-operations-skill.md  anki-study-ux-roadmap.md  openclaw-plugin.md  spec.md
integrations/openclaw-plugin/: README.md  index.js  openclaw.plugin.json  package.json
ops/: test-matrix.yaml
scripts/: audit_cli_surface.py  audit_quality_matrix.py  build_release_artifact.py  generate_openclaw_artifacts.py  install.ps1  install.sh  migrate_ios_audio.py  prepare_ankiconnect_backend.py  prepare_real_backend.py  run_matrix_phase3.py  validate_release_version.py
site/: astro.config.mjs  package-lock.json  package.json
skills/ankicli-collection-management/: SKILL.md
skills/ankicli-diagnostics/: SKILL.md
skills/ankicli-note-authoring/: SKILL.md
skills/ankicli-release/: SKILL.md
skills/ankicli-study/: SKILL.md
src/ankicli/: __init__.py  main.py  pytest_plugin.py  runtime.py
tests/: __init__.py  conftest.py  proof.py
tests/distribution/: test_built_artifact.py
tests/e2e/: test_cli_e2e.py
tests/fixtures/: README.md  __init__.py  build_fixture.py
tests/integration/: helpers.py  test_python_anki_backend.py
tests/real/: test_ankiconnect_real.py  test_python_anki_backup_real.py  test_python_anki_real_setup.py
tests/smoke/: test_cli_smoke.py  test_install_scripts.py
tests/unit/: test_ankiconnect_backend_unit.py  test_backend_parity.py  test_catalog_and_study.py  test_cli_contract.py  test_config.py  test_credentials.py  test_ios_audio_migration.py  test_openclaw_plugin_generation.py  test_output.py  test_phase3_runner.py  test_profiles.py  test_python_anki_backend_unit.py  test_quality_matrix.py  test_releases.py  test_services.py
(+58 files in other folders)
