[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "anki-agent-toolkit"
version = "0.1.3"
description = "Local-first, automation-grade Anki collection management CLI"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
  "anki==25.9.2",
  "keyring>=25,<26",
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.optional-dependencies]
dev = [
  "PyInstaller>=6.13,<7",
  "PyYAML>=6,<7",
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]

[project.scripts]
ankicli = "ankicli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ankicli"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.agents",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.uv-bootstrap",
  "/.uv-cache",
  "/.venv",
  "/build",
  "/dist",
]

[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "ankicli/CHANGELOG.md"
"bundled-skills" = "ankicli/bundled-skills"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "unit: fast logic and contract tests",
  "fixture_integration: deterministic repo-owned fixture and contract-level integration tests",
  "e2e: editable-install CLI entrypoint tests through uv run",
  "distribution: built-artifact packaging and isolated-install validation",
  "smoke: fastest confidence gate for local and CI runs",
  "slow: longer-running tests that do not belong in the fast path",
  "backend_python_anki_real: reserved for future real Python-Anki integration coverage",
  "backend_python_anki_backup_real: opt-in disposable real Python-Anki backup/profile coverage",
  "backend_ankiconnect_real: opt-in live AnkiConnect integration coverage",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
